[gd_scene load_steps=21 format=2]

[ext_resource path="res://Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/homespun.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/normalButton.tres" type="StyleBox" id=3]
[ext_resource path="res://Assets/pressedButton.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/hoverButton.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/Menu.gd" type="Script" id=6]
[ext_resource path="res://Assets/default.tres" type="DynamicFont" id=7]

[sub_resource type="Shader" id=5]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform bool flash = false;

void fragment() {
	if (flash) {
		COLOR = vec4(1.0, 1.0, 1.0, texture(TEXTURE, UV).a);
	} else {
		COLOR = texture(TEXTURE, UV);
	}
}"

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/flash = false

[sub_resource type="Shader" id=16]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform bool flash = false;

void fragment() {
	if (flash) {
		COLOR = vec4(1.0, 1.0, 1.0, texture(TEXTURE, UV).a);
	} else {
		COLOR = texture(TEXTURE, UV);
	}
}"

[sub_resource type="ShaderMaterial" id=17]
resource_local_to_scene = true
shader = SubResource( 16 )
shader_param/flash = false

[sub_resource type="Animation" id=11]
resource_name = "laser"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Light:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 90.0, -0.1, -90.0, 0.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.9, 1, 1.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.619608 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Shader" id=12]
resource_local_to_scene = true
code = "// NOTE: Shader automatically converted from Godot Engine 3.5.1.stable's CanvasItemMaterial.

shader_type canvas_item;
render_mode blend_add;
uniform float energy = 1.0;
uniform vec4 colour = vec4(1.0, 1.0, 1.0, 1.0);

void fragment() {
	COLOR = texture(SCREEN_TEXTURE, SCREEN_UV) * texture(TEXTURE, UV)*colour*energy + texture(TEXTURE, UV)*colour*energy*0.35;
}"

[sub_resource type="ShaderMaterial" id=13]
resource_local_to_scene = true
shader = SubResource( 12 )
shader_param/energy = 1
shader_param/colour = Color( 1, 0, 0, 1 )

[sub_resource type="Shader" id=14]
resource_local_to_scene = true
code = "// NOTE: Shader automatically converted from Godot Engine 3.5.1.stable's CanvasItemMaterial.

shader_type canvas_item;
render_mode blend_add;
uniform float energy = 1.0;
uniform vec4 colour = vec4(1.0, 1.0, 1.0, 1.0);

void fragment() {
	COLOR = texture(SCREEN_TEXTURE, SCREEN_UV) * texture(TEXTURE, UV)*colour*energy + texture(TEXTURE, UV)*colour*energy*0.35;
}"

[sub_resource type="ShaderMaterial" id=15]
resource_local_to_scene = true
shader = SubResource( 14 )
shader_param/energy = 1
shader_param/colour = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Title:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "menu"
length = 1.25
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Title:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.05, 1.1, 1.15, 1.2, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 3.0, -3.0, 3.0, -3.0, 0.0 ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Game" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="Game/nav/YSort" index="2"]
script = null

[node name="Goblin" parent="Game/nav/YSort/Goblin" index="0"]
material = SubResource( 6 )

[node name="Gangster" parent="Game/nav/YSort" index="15"]
material = SubResource( 17 )

[node name="AnimationPlayer" parent="Game" index="10"]
anims/laser = SubResource( 11 )

[node name="Light" parent="Game/lightBeams/LightBeam2" index="0"]
material = SubResource( 13 )

[node name="Light" parent="Game/lightBeams/LightBeam3" index="0"]
material = SubResource( 15 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true

[node name="UI" type="CanvasLayer" parent="."]
layer = 25

[node name="Title" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 40.0
margin_right = 120.0
margin_bottom = 80.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 180, 0 )
custom_colors/font_color = Color( 0, 1, 0.156863, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 1 )
text = "The 2 Goblins"
align = 1

[node name="Menu" type="VBoxContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -60.0
margin_right = 84.0
margin_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Play" type="Button" parent="UI/Menu"]
margin_right = 168.0
margin_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
enabled_focus_mode = 0
text = "Play"

[node name="Credits" type="Button" parent="UI/Menu"]
margin_top = 62.0
margin_right = 168.0
margin_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
enabled_focus_mode = 0
text = "Credits"

[node name="Credits" type="VBoxContainer" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -29.0
margin_right = 84.0
margin_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Credits" type="Label" parent="UI/Credits"]
margin_right = 516.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 7 )
text = "Music From Fesliyan Studios"
align = 1

[node name="Back" type="Button" parent="UI/Credits"]
margin_left = 129.0
margin_top = 44.0
margin_right = 387.0
margin_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
enabled_focus_mode = 0
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "menu"
anims/RESET = SubResource( 2 )
anims/menu = SubResource( 3 )

[connection signal="pressed" from="UI/Menu/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="UI/Menu/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="UI/Credits/Back" to="." method="_on_Back_pressed"]

[editable path="Game"]
[editable path="Game/nav/YSort/Goblin"]
[editable path="Game/lightBeams/LightBeam2"]
[editable path="Game/lightBeams/LightBeam3"]
